--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <title>tinavg - This Is Not A Vocabulary Game</title>
-  <meta name="description" content="This is a language learning game suitable for all ages that helps one learn the alphabet in a target language and produce the sounds of that language.">
+  <meta name="description" content="This is a language learning game suitable for all ages that helps one learn the alphabet in a target language and produce the sounds of that language.  English and German are currently implemented.">
 
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -18,171 +18,20 @@
   <!-- Polymer Imports -->
   <script src="../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
   <link rel="import" href="../bower_components/polymer/polymer.html">
-  <!-- Layout/Polymer Elements -->
-  <link rel="import" href="../bower_components/layout/layout.html">
-  <link rel="import" href="../bower_components/core-header-panel/core-header-panel.html">
-  <link rel="import" href="../bower_components/core-collapse/core-collapse.html">
-  <link rel="import" href="../bower_components/core-icons/core-icons.html">
-  <link rel="import" href="../bower_components/core-overlay/core-overlay.html">
-  <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
-  <!-- Custom Elements Vulcanized -->
-  <link rel="import" href="elements/elements.html">
   <!-- Fix for Viewport Units -->
   <script src="../bower_components/viewport-units-buggyfill/viewport-units-buggyfill.js"></script>
   <script src="../bower_components/viewport-units-buggyfill/viewport-units-buggyfill.hacks.js"></script>
+  <!-- tinavg-webapp -->
+  <link rel="import" href="elements/tinavg-webapp.html">
+  
 </head>
 
 <body fullbleed unresolved>
   <!-- arabic alphabet
   غ	ظ	ض	ذ	خ	ث	ت	ش	ر	ق	ص	ف	ع	س	ن	م	ل	ك	ي	ط	ح	ز	و	ه	د	ج	ب	ا
   -->
-  <core-header-panel id="header-panel">
-    <core-toolbar class="core-header horizontal justified layout start">
-      <score-board id="score-board-player-1" player="1" class="horizontal start-justified layout flex"></score-board>
-      <word-board class="horizontal center-justified layout flex-2" lang-code="de"></word-board>
-      <div class="top-right-item horizontal end-justified layout flex">
-        <score-board id="score-board-player-2" player="2" hidden></score-board>
-        <word-recorder></word-recorder>
-      </div>
-    </core-toolbar>
-    <div class="content">
-      <div class="horizontal layout">
-        <core-collapse id="collapse1" horizontal>
-          <div class="mini-menu">
-            <div>
-              Language: 
-              <select onchange="setLang(this.value)">
-                <option value="de">German</option>
-                <option value="en">English</option>
-                <option value="en-US-south">English (US South)</option>
-                <option value="ar">Arabic</option>
-                <!--
-                <option value="tr">Turkish</option>
-                -->
-              </select>
-            </div>
-            <div><br />Expertmodus: <button id="select-recordmodus" onclick="toggleExpertModus(myWord)">toggle</button></div>
-            <div><br />Recordmodus: <button id="select-recordmodus" onclick="toggleEl(recordDiv)">toggle</button></div>
-            <div><br />BuggyFill: <button id="select-buggyfill" onclick="refreshBuggyFill()">toggle</button></div>
-            <div hidden><br />Nerdmodus: <button id="select-nerdmodus" onclick="toggleNerdModus()">toggle</button></div>
-          </div>
-        </core-collapse>
-        <letter-list id="letter-grid" limit="12" lang-code="de"></letter-list>
-      </div>
-      <div class="footer horizontal justified layout center">
-        <div class="footer-button horizontal start-justified layout flex">
-          <paper-icon-button id="menu-toggle" icon="trending-neutral" onclick="toggleCoreCollapse()"></paper-icon-button>
-        </div>
-        <jumbotron-text class="horizontal center-justified layout flex-2"></jumbotron-text>
-        <div id="nerdmodus-div" class="horizontal end-justified layout flex">
-          <div id="clue-show-div"><paper-icon-button id="clue-show" icon="text-format" onclick="showClue()"></paper-icon-button></div>
-          <paper-icon-button id="help-show" icon="help" onclick="showHelp()"></paper-icon-button>
-        </div>
-      </div>
-    </div>
-  </core-header-panel>
-  <core-overlay id="help-overlay" class="dialog" backdrop>
-    <section>
-    <div id="close-help-overlay"><paper-icon-button id="close-help-overlay-icon" icon="cancel" onclick="showHelp()"></core-icon></div>
-    <center><h1>This Is Not A Vocabulary Game</h1></center>
-    <h3>The Goal</h3>
-    <p>Learn the alphabet (shapes and sounds) and spelling patterns of a foreign language.</p>
-    <h3>The Rules</h3>
-    <ol>
-      <li>Look at the word at the top of the page.</li>
-      <li>Spell the word by tapping the letters in the grid.</li>
-      <li>Check your answer by tapping the word at the bottom of the page.</li>
-    </ol>
-    <h3>Scoring and Tips</h3>
-    <ol>
-      <li>100 points for each correct answer and -30 points for each wrong answer.</li>
-      <li>If you need help, click the <paper-icon-button id="help-overlay-a" icon="text-format"></paper-icon-button> button in the bottom right corner.</li>
-      <li>When you spell the word correctly, you will automatically hear the word.</li>
-      <li>However, you still must click the word at the bottom to check it.</li>
-      <li>There is no delete button, so be careful!</li>
-    </ol>
-    <div id="help-lang-specific">
-    <h3><u>Arabic</u></h3>
-    <ol>
-      <li>Right to left language </li>
-      <li>Letters change depending on position within the word (solo, beginning, middle, end)</li>
-      <li>Ignore the symbols (non-dots only) above and below certain letters in your answer</li>
-      <li>These are called diacritics (like accent marks in latin languages) and are used for pronounciation, but are not considered different letters and they are not included past the learning stage of the language</li>
-      <li>Arabic is like the Flappy Bird of languages... Good Luck!</li>
-    </ol>
-    </div>
-    </section>
-  </core-overlay>
+  <tinavg-webapp></tinavg-webapp>
   <script type="text/javascript">
-    var wordBoard = document.querySelector('word-board');
-    var letterList = document.querySelector('letter-list');
-    var jumbotron = document.querySelector('jumbotron-text');
-    var overlay = document.getElementById('help-overlay');
-    var recordDiv = document.getElementById('record-elem');
-    var scoreBoard2 = document.getElementById('score-board-player-2');
-    var collapseMenu = document.getElementById('collapse1');
-    var menuToggleButton = document.getElementById('menu-toggle');
-    var clueShow = document.getElementById('clue-show');
-    var myWord = document.getElementById('my-word');
-    
-    function toggleCoreCollapse() {
-      collapseMenu.toggle();
-      if(collapseMenu.opened) {
-        menuToggleButton.style.transform = "rotateY(180deg)";
-      } else {
-        menuToggleButton.style.transform = "rotateY(0deg)";
-      }
-    }
-    function setLang(lang) {
-      console.log("toggling language: " + lang);
-      wordBoard.setAttribute("lang-code", lang);
-      letterList.setAttribute("lang-code", lang);
-      jumbotron.resetBox();
-    }
-    function showHelp() {
-      overlay.toggle();
-    }
-    function toggleEl(el) {
-      if(el.getAttribute("hidden")) {
-        el.removeAttribute("hidden");
-      } else {
-        el.setAttribute("hidden", true);
-      }
-    }
-    function toggleRecordDiv() {
-      if(recordDiv.getAttribute("hidden")) {
-        recordDiv.removeAttribute("hidden");
-      } else {
-        recordDiv.setAttribute("hidden", true);
-      }
-    }
-    function toggleScoreBoard2() {
-      // not implemented yet
-      if(scoreBoard2.getAttribute("hidden")) {
-        scoreBoard2.removeAttribute("hidden");
-      } else {
-        scoreBoard2.setAttribute("hidden", true);
-      }
-    }
-    function showClue() {
-      wordBoard.revealWord();
-      if(clueShow.classList.contains("glow-yellow")) clueShow.classList.remove("glow-yellow");
-    }
-    function toggleNerdModus() {
-      // Stub for those that want to learn good.
-    }
-    function toggleExpertModus(el) {
-      if(!el.classList.contains('invisible-text')) {
-        el.classList.add('invisible-text')
-      } else {
-        el.classList.remove('invisible-text')
-      }
-    }
-    function removeUnresolved() {
-      // not used, rather done directly in letter-list.html
-      // but this stub is in case I want to move it here.
-      document.body.removeAttribute("unresolved");
-    }
     function refreshBuggyFill() {
       window.viewportUnitsBuggyfill.refresh();
     }
