moved everything into the tinavg-webapp and added keyboard shortcuts

--- a/app/elements/jumbotron-text.html
+++ b/app/elements/jumbotron-text.html
@@ -30,6 +30,10 @@
       zielWort: {
         type: String,
         value: "_____"
+      },
+      tabindex: {
+        type: Number,
+        reflectToAttribute: true
       }
     },
     listeners: {
