--- a/app/elements/tinavg-webapp.html
+++ b/app/elements/tinavg-webapp.html
@@ -41,7 +41,7 @@
                     -->
                   </select>
                 </div>
-                <div><br />Expertmodus: <button id="select-expertmodus" onclick="toggleExpertModus(myWord)">toggle</button></div>
+                <div><br />Earmodus: <button id="select-earmodus" onclick="toggleEarModus(myWord)">toggle</button></div>
                 <div><br />Learnmodus: <button id="select-learnmodus" onclick="toggleLearnModus()">toggle</button></div>
                 <div><br />Recordmodus: <button id="select-recordmodus" onclick="toggleEl(recordDiv)">toggle</button></div>
                 <div><br />BuggyFill: <button id="select-buggyfill" onclick="refreshBuggyFill()">toggle</button></div>
@@ -191,7 +191,7 @@
   function toggleNerdModus() {
     // Stub for those that want to learn good.
   }
-  function toggleExpertModus() {
+  function toggleEarModus() {
     wordBoard.hideWord();
   }
   function removeUnresolved() {
@@ -199,7 +199,13 @@
     // but this stub is in case I want to move it here.
     document.body.removeAttribute("unresolved");
   }
-  
+  function refreshBuggyFill() {
+    window.viewportUnitsBuggyfill.init({force: true});
+    window.viewportUnitsBuggyfill.refresh();
+    window.viewportUnitsBuggyfill.findProperties();
+    console.log(window.viewportUnitsBuggyfill.getCss());
+  }
+
   Mousetrap.bind('shift+enter', function() { 
     jumbotron.click(); 
   });
