--- a/app/elements/tinavg-webapp.html
+++ b/app/elements/tinavg-webapp.html
@@ -249,5 +249,8 @@
     }
     console.log("backspace...");
   });
+  document.body.addEventListener("polymer-ready", function() {
+    document.body.removeAttribute("unresolved");
+  });
 
 </script>
